--- a/src/main/resources/assets/morecraftingtables/lang/en_us.json
+++ b/src/main/resources/assets/morecraftingtables/lang/en_us.json
@@ -7,5 +7,6 @@
   "block.morecraftingtables.acacia_crafting_table": "Acacia Crafting Table",
   "block.morecraftingtables.dark_oak_crafting_table": "Dark Oak Crafting Table",
   "block.morecraftingtables.crimson_crafting_table": "Crimson Crafting Table",
-  "block.morecraftingtables.warped_crafting_table": "Warped Crafting Table"
+  "block.morecraftingtables.warped_crafting_table": "Warped Crafting Table",
+  "block.morecraftingtables.cobblestone_crafting_table": "Cobblestone Crafting Table"
 }
