--- a/CHANGELOG
+++ b/CHANGELOG
@@ -14,5 +14,8 @@ v0.1.1
 v0.1.2
 * Fixed overriding Minecraft's default language file
 
-v0.1.3
-*
+v0.2.0
+* Added Cobblestone Crafting Table
+
+v0.2.1
+* Fixed rendering bug with Cobblestone Crafting Table
