Add Bamboo Crafting Table with support for Bamboo Expanded

--- a/src/main/resources/assets/craftier/lang/en_us.json
+++ b/src/main/resources/assets/craftier/lang/en_us.json
@@ -9,4 +9,5 @@
   "block.craftier.crimson_crafting_table": "Crimson Crafting Table",
   "block.craftier.warped_crafting_table": "Warped Crafting Table",
   "block.craftier.cobblestone_crafting_table": "Cobblestone Crafting Table"
+  "block.craftier.bamboo_crafting_table": "Bamboo Crafting Table"
 }
